added titles to each page

--- a/about-me.html
+++ b/about-me.html
@@ -4,6 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">    
         <link href="https://fonts.googleapis.com/css?family=Lora|Ubuntu:300,400,700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/styles.css">
+        <title>About Me - Living the social life</title>
     </head>
     <body> 
         <header>
@@ -64,7 +65,7 @@
         
         <footer>
             <p><strong>Living the Simple Life</strong></p>
-            <p>Copyright 2019</p>
+            <p>Copyright 2021</p>
         </footer>
 
         
