--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">    
         <link href="https://fonts.googleapis.com/css?family=Lora|Ubuntu:300,400,700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/styles.css">
+        <title>Living the social life</title>
     </head>
     <body> 
         <header>
@@ -101,7 +102,7 @@
         
         <footer>
             <p><strong>Living the Simple Life</strong></p>
-            <p>Copyright 2019</p>
+            <p>Copyright 2021</p>
         </footer>
 
         
